--- a/src/main/resources/com/kursinis/ptkursinis/view/reviewsPage.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/reviewsPage.fxml
@@ -2,60 +2,62 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" style="-fx-background-color: #FDF2F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.ReviewsPageController">
-   <padding>
-      <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-   </padding>
-   <children>
-      <TableView fx:id="productTable" prefHeight="699.0" prefWidth="630.0">
-          <columns>
-              <TableColumn prefWidth="110.0" text="Brand">
-                  <cellValueFactory>
-                      <PropertyValueFactory property="brand" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn prefWidth="135.20001983642578" text="Name">
-                  <cellValueFactory>
-                      <PropertyValueFactory property="name" />
-                  </cellValueFactory>
-              </TableColumn>
-              <TableColumn minWidth="0.0" prefWidth="85.5999755859375" text="Price">
-                  <cellValueFactory>
-                      <PropertyValueFactory property="price" />
-                  </cellValueFactory>
-              </TableColumn>
+    <padding>
+        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+    </padding>
+    <children>
+        <VBox alignment="CENTER" prefHeight="699.0" prefWidth="380.0" spacing="30.0">
+            <children>
+                <TableView fx:id="productTable" prefHeight="699.0" prefWidth="443.0">
+                    <columns>
+                        <TableColumn prefWidth="110.0" text="Brand">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="brand" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn prefWidth="135.20001983642578" text="Name">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="name" />
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn minWidth="0.0" prefWidth="85.5999755859375" text="Price">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="price" />
+                            </cellValueFactory>
+                        </TableColumn>
 
-          </columns>
-         <HBox.margin>
-            <Insets right="50.0" />
-         </HBox.margin>
-      </TableView>
-      <VBox prefHeight="699.0" prefWidth="649.0" style="-fx-alignment: center;">
-          <padding>
-              <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-          </padding>
-         <children>
-            <ListView fx:id="reviewsList" prefHeight="380.0" prefWidth="605.0" />
-            <Label fx:id="reviewLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="272.0" prefWidth="648.0" text="Select a product" textFill="#794848">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
-            <Button mnemonicParsing="false" onAction="#rate" style="-fx-alignment: center; -fx-background-color: #593636;" text="Rate this product" textFill="#fdf2f2">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-   </children>
+                    </columns>
+                </TableView>
+                <Button alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#reviewSelectedProduct" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Review selected product" textFill="#fdf2f2">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Button>
+            </children>
+            <HBox.margin>
+                <Insets right="50.0" />
+            </HBox.margin>
+        </VBox>
+        <TreeView fx:id="treeView" prefHeight="699.0" prefWidth="571.0">
+            <contextMenu>
+                <ContextMenu>
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#deleteComment" text="Delete" />
+                        <MenuItem mnemonicParsing="false" onAction="#reply" text="Reply" />
+                    </items>
+                </ContextMenu>
+            </contextMenu>
+        </TreeView>
+    </children>
 </HBox>
